// Vitest Snapshot v1

exports[`<TextField> > renders and matches multiline snapshot 1`] = `
<div>
  <div
    class="_textField_e16c1b"
  >
    <label
      class="_label_e16c1b"
      for="text-field_1235_name"
    >
      Label
      <span>
        optional
      </span>
    </label>
    <div
      class="_container_e16c1b"
    >
      <textarea
        class="_input_e16c1b"
        id="text-field_1235_name"
        name="name"
        placeholder="Placeholder"
        rows="3"
      />
    </div>
  </div>
</div>
`;

exports[`<TextField> > renders and matches snapshot 1`] = `
<div>
  <div
    class="_textField_e16c1b"
  >
    <label
      class="_label_e16c1b"
      for="text-field_1235_name"
    >
      Label
      <span>
        optional
      </span>
    </label>
    <div
      class="_container_e16c1b"
    >
      <input
        class="_input_e16c1b"
        id="text-field_1235_name"
        name="name"
        placeholder="Placeholder"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;
